# Particle-Life

./: CMakeLists.txt  configure.sh
src/: main.cpp  particle.cpp
src/include/: particle.h
